--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <version>1.2.47</version>
         </dependency>
         <dependency>
+            <groupId>org.scorexfoundation</groupId>
+            <artifactId>scrypto_2.12</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
