--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@
 Full_Node=http://127.0.0.1:47768
 
 # leveldb ÎÄ¼þÎ»ÖÃ
-LevelDB_filePath=db/test.db
+LevelDB_filePath=db/lightNode
+
+traceContrantAddress=0x154b850B706F7faABFBcfAD95F8c97A19CB12cD1
