--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ Full_Node=http://127.0.0.1:47768
 # leveldb ÎÄ¼þÎ»ÖÃ
 LevelDB_filePath=db/lightNode
 
-traceContrantAddress=0xCde5c850a0998Cb1B37d7bd2d98340FFe9caaDd5
+traceContrantAddress=0xB9B4e1D8b13A0273034bE82aedc68b18ea651656
+
+base_event_names=create,change,transfer,remove
