--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
             <version>1.2.47</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.scorexfoundation</groupId>
             <artifactId>scrypto_2.12</artifactId>
             <version>1.2.0</version>
