--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ LevelDB_filePath=db/lightNode
 traceContrantAddress=0xB9B4e1D8b13A0273034bE82aedc68b18ea651656
 
 base_event_names=create,change,transfer,remove
+
+spring.redis.port=6379
+spring.redis.host=localhost
+spring.redis.password=123456
+#spring.redis.database=1
+
